# growth-claw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LANDING-PAGE.md  LICENSE  PHASE2-PROMPT.md  PRD.md  README.md  V1-SPEC.md  prompt.md  pyproject.toml
.claude-docs/: async-postgres.md  harness-architecture.md  llm-integration.md  mcp-tools.md  pydantic-patterns.md  testing.md  triggers-cdc.md
docs/: index.html
docs/deck/: index.html
growthclaw/: channels.py  cli.py  config.py  daemon.py  growthclaw-agent.service  harness.py  main.py  mcp_server.py  migrate.py  setup_wizard.py  skill.md  workspace.py  workspace_context.py
growthclaw/autoresearch/: evaluator.py  hypothesis_generator.py  loop.py  prompt_optimizer.py  variant_creator.py
growthclaw/dashboard/: app.py  queries.py
growthclaw/discovery/: concept_mapper.py  data_sampler.py  funnel_analyzer.py  relationship_resolver.py  schema_scanner.py  schema_store.py
growthclaw/experiments/: experiment_manager.py  experiment_store.py  outcome_checker.py
growthclaw/hooks/: notification.py  post_tool_use.py
growthclaw/intelligence/: nightly_sweep.py  profile_analyzer.py  profile_builder.py  profile_store.py
growthclaw/llm/: anthropic_fallback.py  client.py  nvidia_nim.py  usage_tracker.py
growthclaw/memory/: dag.py  dag_models.py  embedder.py  manager.py  schemas.py
growthclaw/migrations/: 001_create_growthclaw_schema.sql  002_phase2_tables.sql  003_llm_usage_tracking.sql  004_polling_watermarks.sql  005_compiler_state.sql  (+2 more)
scripts/: health-check.sh  install-vps.sh  install.sh
site/: index.html
(+74 files in other folders)
